--- a/11-mega-blog/Mega_Blog/package.json
+++ b/11-mega-blog/Mega_Blog/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.11.1",
     "@tailwindcss/vite": "^4.1.17",
     "@tinymce/tinymce-react": "^6.3.0",
     "appwrite": "^21.5.0",
     "cloudinary": "^2.8.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.26",
     "html-react-parser": "^5.2.10",
+    "lucide-react": "^0.561.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
     "tailwindcss": "^4.1.17",
